# comments_state_pattern

./: CMakeLists.txt  README.md  build.sh  gTest.cmake
project/: comments.cpp  comments.h  comments_remover.cpp  comments_remover.h  states.cpp  states.h
test/: comments_gTest.cpp
